[project]
name = "sc2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "playwright-stealth>=1.0.6",
    "pytest-playwright>=0.5.2",
    "requests>=2.32.3",
    "rich>=13.9.2",
    "setuptools>=75.2.0",
    "typer>=0.12.5",
    "undetected-playwright>=0.3.0",
]
